kustomize/public-api/overlays/dev/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api

spec:
  replicas: 5
