kustomize/public-api/overlays/dev/api.ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: public-api-ingress
  namespace: development
spec:
  routes:
  - kind: Rule
    match: Host(`public.captoso.eu`)
    priority: 10
    services:
    - kind: Service
      name: public-api
      port: 80
